[gd_scene load_steps=54 format=2]

[ext_resource path="res://scenes/menu/127Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/delfino.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/styles/LevelListPanel.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/styles/RedButtonStyleNormal.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/styles/RedButtonStyleHover.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/fonts/DelfinoFont24.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/styles/BrightButtonStyleHover.tres" type="StyleBox" id=7]
[ext_resource path="res://scenes/menu/search/searchbar.gd" type="Script" id=8]
[ext_resource path="res://scenes/editor/assets/search_icon.png" type="Texture" id=9]
[ext_resource path="res://scenes/menu/search/search_screen.gd" type="Script" id=10]
[ext_resource path="res://assets/fonts/delfino_dynamicfontdata.tres" type="DynamicFontData" id=11]
[ext_resource path="res://scenes/editor/assets/clickable_arrow_hover.png" type="Texture" id=12]
[ext_resource path="res://scenes/editor/assets/clickable_arrow.png" type="Texture" id=13]
[ext_resource path="res://assets/misc/loading.png" type="Texture" id=14]
[ext_resource path="res://scenes/shared/background/backgrounds/day/day.png" type="Texture" id=15]
[ext_resource path="res://scenes/menu/levels_screen/ui/star_coin_icon.png" type="Texture" id=16]
[ext_resource path="res://scenes/menu/levels_screen/shine_icon.png" type="Texture" id=17]
[ext_resource path="res://scenes/shared/background/foregrounds/hills/preview.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=16]
size = 24
outline_size = 2
outline_color = Color( 0.054902, 0, 0.25098, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=17]
resource_local_to_scene = true
size = 24
outline_size = 2
outline_color = Color( 0.054902, 0, 0.25098, 1 )
extra_spacing_char = 1
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.75, 0.75, 0.75, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.61, 0.61, 0.61, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=5]
content_margin_right = 8.0
bg_color = Color( 0.121569, 0.180392, 0.517647, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Theme" id=6]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 2 )
VScrollBar/styles/grabber_highlight = SubResource( 3 )
VScrollBar/styles/grabber_pressed = SubResource( 4 )
VScrollBar/styles/scroll = SubResource( 5 )
VScrollBar/styles/scroll_focus = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0805, 0.120925, 0.35, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.121569, 0.180392, 0.517647, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 19
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 475, 480 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 14 )
region = Rect2( 475, 0, 475, 480 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 14 )
region = Rect2( 950, 0, 475, 480 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 14 )
region = Rect2( 1425, 0, 475, 480 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 14 )
region = Rect2( 1900, 0, 475, 480 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 14 )
region = Rect2( 2375, 0, 475, 480 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 14 )
region = Rect2( 2850, 0, 475, 480 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 14 )
region = Rect2( 3325, 0, 475, 480 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 14 )
region = Rect2( 3800, 0, 475, 480 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 14 )
region = Rect2( 4275, 0, 475, 480 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 14 )
region = Rect2( 4750, 0, 475, 480 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 14 )
region = Rect2( 5225, 0, 475, 480 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="StyleBoxFlat" id=31]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0.0470588, 0.317647, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=32]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=33]
size = 24
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=34]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 0.0470588, 0.317647, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Animation" id=35]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -2 ) ]
}

[sub_resource type="Animation" id=36]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -2 ) ]
}

[node name="SearchScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -2.0
margin_right = 1537.0
margin_bottom = 862.0
rect_pivot_offset = Vector2( -343, -58 )
script = ExtResource( 10 )

[node name="Control" type="Control" parent="."]
margin_left = 66.0
margin_top = 24.0
margin_right = 336.0
margin_bottom = 163.0

[node name="PageSelect" type="Control" parent="Control"]
margin_left = -556.0
margin_top = -94.0
margin_right = -26.0
margin_bottom = -54.0

[node name="Label" type="Label" parent="Control/PageSelect"]
show_behind_parent = true
margin_left = 578.0
margin_top = 88.0
margin_right = 761.0
margin_bottom = 132.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/normal = ExtResource( 3 )
text = "Page:"
valign = 1

[node name="Value" type="Label" parent="Control/PageSelect"]
margin_left = 685.0
margin_top = 95.0
margin_right = 723.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 17 )
text = "nill"
align = 1
valign = 1

[node name="Right" type="TextureButton" parent="Control/PageSelect"]
margin_left = 723.0
margin_top = 97.0
margin_right = 749.0
margin_bottom = 123.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 12 )
expand = true

[node name="Left" type="TextureButton" parent="Control/PageSelect"]
margin_left = 658.0
margin_top = 97.0
margin_right = 684.0
margin_bottom = 123.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 12 )
expand = true
flip_h = true

[node name="PanelContainer" type="PanelContainer" parent="Control"]
margin_left = -8.0
margin_top = 46.0
margin_right = 288.0
margin_bottom = 94.0
custom_styles/panel = ExtResource( 3 )

[node name="TextEdit" type="TextEdit" parent="Control/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 40.0
theme = SubResource( 12 )
custom_constants/line_spacing = -2
custom_fonts/font = ExtResource( 6 )
custom_styles/read_only = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = ExtResource( 7 )
custom_styles/completion = SubResource( 15 )
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_left = -51.0
margin_top = 48.0
margin_right = 37.0
margin_bottom = 136.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = -55.0
margin_top = 100.0
margin_right = 287.0
margin_bottom = 403.0
size_flags_horizontal = 3

[node name="LevelListPanel" type="PanelContainer" parent="Control/VBoxContainer"]
margin_right = 342.0
margin_bottom = 259.0
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/LevelListPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 334.0
margin_bottom = 251.0

[node name="LevelList" type="ItemList" parent="Control/VBoxContainer/LevelListPanel/VBoxContainer"]
margin_right = 326.0
margin_bottom = 243.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/selected_focus = SubResource( 8 )
custom_styles/bg_focus = SubResource( 9 )
custom_styles/selected = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
allow_reselect = true
same_column_width = true
fixed_column_width = 290
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 263.0
margin_right = 342.0
margin_bottom = 303.0

[node name="ButtonBack" parent="Control/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_right = 77.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 10 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Back"

[node name="ButtonAdd" parent="Control/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 81.0
margin_right = 154.0
margin_bottom = 40.0
size_flags_horizontal = 8
custom_fonts/font = SubResource( 10 )
text = "Add"

[node name="ButtonCopyCode" parent="Control/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 158.0
margin_right = 342.0
margin_bottom = 40.0
size_flags_horizontal = 11
custom_fonts/font = SubResource( 11 )
text = "Copy Level Code"

[node name="Loading" type="AnimatedSprite" parent="."]
position = Vector2( 178, 250 )
scale = Vector2( 0.217895, 0.217895 )
frames = SubResource( 30 )
frame = 10
playing = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Control2" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LevelScore" type="GridContainer" parent="Control2"]
margin_left = 377.0
margin_top = 274.0
margin_right = 743.0
margin_bottom = 346.0
size_flags_vertical = 3
columns = 2

[node name="ShineProgressPanel" type="PanelContainer" parent="Control2/LevelScore"]
margin_right = 181.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 31 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Control2/LevelScore/ShineProgressPanel"]
margin_left = 16.0
margin_top = 2.0
margin_right = 165.0
margin_bottom = 70.0

[node name="ShineIcon" type="TextureRect" parent="Control2/LevelScore/ShineProgressPanel/HBoxContainer2"]
margin_right = 72.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 17 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShineProgressLabel" type="Label" parent="Control2/LevelScore/ShineProgressPanel/HBoxContainer2"]
margin_left = 134.0
margin_top = 20.0
margin_right = 149.0
margin_bottom = 48.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 32 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarCoinProgressPanel" type="PanelContainer" parent="Control2/LevelScore"]
margin_left = 185.0
margin_right = 366.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 31 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Control2/LevelScore/StarCoinProgressPanel"]
margin_left = 16.0
margin_top = 2.0
margin_right = 165.0
margin_bottom = 70.0

[node name="StarCoinIcon" type="TextureRect" parent="Control2/LevelScore/StarCoinProgressPanel/HBoxContainer3"]
margin_right = 72.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 16 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarCoinProgressLabel" type="Label" parent="Control2/LevelScore/StarCoinProgressPanel/HBoxContainer3"]
margin_left = 134.0
margin_top = 20.0
margin_right = 149.0
margin_bottom = 48.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 32 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelCreator" type="Label" parent="Control2"]
margin_left = 431.0
margin_top = 240.0
margin_right = 797.0
margin_bottom = 291.0
rect_scale = Vector2( 0.7, 0.7 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.51
custom_fonts/font = SubResource( 33 )
text = "Level Creator
"
align = 1
autowrap = true
clip_text = true
max_lines_visible = 2

[node name="LevelInfo" type="VBoxContainer" parent="Control2"]
margin_left = 377.0
margin_top = 79.0
margin_right = 743.0
margin_bottom = 276.0
size_flags_horizontal = 3
custom_constants/separation = 11

[node name="LevelThumbnail" type="MarginContainer" parent="Control2/LevelInfo"]
margin_right = 366.0
margin_bottom = 123.0
size_flags_vertical = 3
custom_constants/margin_right = 75
custom_constants/margin_left = 75

[node name="PanelContainer" type="PanelContainer" parent="Control2/LevelInfo/LevelThumbnail"]
margin_left = 75.0
margin_right = 291.0
margin_bottom = 123.0
size_flags_horizontal = 9
size_flags_vertical = 3
custom_styles/panel = SubResource( 34 )

[node name="ThumbnailImage" type="TextureRect" parent="Control2/LevelInfo/LevelThumbnail/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 115.0
size_flags_vertical = 3
texture = ExtResource( 15 )
expand = true
stretch_mode = 6

[node name="ForegroundThumbnailImage" type="TextureRect" parent="Control2/LevelInfo/LevelThumbnail/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 115.0
size_flags_vertical = 3
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="LevelName" type="Label" parent="Control2/LevelInfo"]
margin_top = 134.0
margin_right = 366.0
margin_bottom = 197.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.51
custom_fonts/font = SubResource( 33 )
text = "Level Name"
align = 1
clip_text = true
max_lines_visible = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 35 )
anims/default = SubResource( 36 )

[node name="HTTPRequest2" type="HTTPRequest" parent="."]
